--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="main_fragment_bg">#504A4A</color>
+    <color name="item_rv_bg">#606060</color>
+    <color name="detail_fragment_bg">#1C1C1C</color>
 </resources>
